# majsdown

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/debug_performance_matters/: debug_performance_matters.mjsd
examples/embed/: embed.mjsd
examples/embed_godbolt/: embed_godbolt.mjsd  main.cpp
examples/replace_namespaces/: replace_namespaces.mjsd
examples/wordlexpr/: style.css  wordlexpr.mjsd
src/majsdown/: converter.cpp  converter.hpp  js_interpreter.cpp  js_interpreter.hpp  majsdown.cpp  majsdown.hpp  pch.hpp
src/majsdown-converter/: main.cpp
test/: basic_doctest.t.cpp  converter.t.cpp  js_interpreter.t.cpp
